--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
     <script>
         // Initialize EmailJS with your public key
         // Replace 'YOUR_PUBLIC_KEY' with your actual EmailJS public key
-        // emailjs.init('YOUR_PUBLIC_KEY');
+        emailjs.init('kpSEWEfyxHhJ_uXcS');
         
         // Smooth scrolling for navigation links
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
