--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
     </footer>
 
     <!-- EmailJS SDK -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/emailjs-com/3.2.0/email.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     
     <script>
         // Initialize EmailJS with your public key
