--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
             }
             
             // Debug: Log the values being sent
-            console.log('EmailJS Public Key:', 'kpSEWEfyxHhJ_uXcS');
+            console.log('EmailJS Public Key:', 'YOUR_PUBLIC_KEY');
             console.log('Service ID will be replaced by deploy script');
             console.log('Template ID will be replaced by deploy script');
             
