--- a/index.html
+++ b/index.html
@@ -831,8 +831,8 @@
             
             // Send email using EmailJS
             emailjs.sendForm(
-                'service_qy08lin',    // This gets replaced by your deploy script
-                'template_yj04ppa',   // This gets replaced by your deploy script
+                'YOUR_SERVICE_ID',    // This gets replaced by your deploy script
+                'YOUR_TEMPLATE_ID',   // This gets replaced by your deploy script
                 this
             ).then(function(response) {
                 console.log('EmailJS SUCCESS!', response.status, response.text);
