--- a/index.html
+++ b/index.html
@@ -756,14 +756,14 @@
                     <div class="contact-icon">📞</div>
                     <div class="contact-text">
                         <h4>Phone Support</h4>
-                        <p>(555) 123-4567</p>
+                        <p>(604) 354-9399</p>
                     </div>
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon">✉️</div>
                     <div class="contact-text">
                         <h4>Email Support</h4>
-                        <p>support@easydoesit.ca</p>
+                        <p>info@easydoesit.ca</p>
                     </div>
                 </div>
                 <div class="contact-item">
