--- a/index.html
+++ b/index.html
@@ -735,10 +735,10 @@
                     With over 10 years of experience in information technology, Ronan founded Easy does IT to provide personalized, reliable IT support to businesses and individuals. His passion for technology and commitment to customer service has helped over 100 clients achieve their technology goals.
                 </p>
                 <div class="credentials">
-                    <div class="credential-badge">CompTIA A+ Certified</div>
+                    <div class="credential-badge">MSc Data Science</div>
+                    <div class="credential-badge">BSc Computing</div>
                     <div class="credential-badge">Microsoft Certified</div>
-                    <div class="credential-badge">Cisco Network Associate</div>
-                    <div class="credential-badge">15+ Years Experience</div>
+                    <div class="credential-badge">10+ Years Experience</div>
                 </div>
             </div>
         </div>
