--- a/index.html
+++ b/index.html
@@ -566,6 +566,8 @@
             }
         }
     </style>
+
+<link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
 </head>
 <body>
     <!-- Header -->
