--- a/index.html
+++ b/index.html
@@ -833,8 +833,8 @@
             
             // Send email using EmailJS
             emailjs.sendForm(
-                'YOUR_SERVICE_ID',  
-                'YOUR_TEMPLATE_ID',   
+                'SERVICE_ID',  
+                'TEMPLATE_ID',   
                 this
             ).then(function(response) {
                 console.log('EmailJS SUCCESS!', response.status, response.text);
