--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
             
             // Send email using EmailJS
             emailjs.sendForm(
-                'SERVICE_ID',  
+                'SERVICE_ID',  //
                 'TEMPLATE_ID',   
                 this
             ).then(function(response) {
