--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
             // Send email using EmailJS
             emailjs.sendForm(
                 'SERVICE_ID',  
-                'TEMPLATE_ID',   
+                'TEMPLATE_ID', //  
                 this
             ).then(function(response) {
                 console.log('EmailJS SUCCESS!', response.status, response.text);
