--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             font-size: 1.5rem;
             font-weight: 700;
             color: #2c5259;
+            white-space: nowrap;
         }
 
         .logo-icon {
@@ -619,7 +620,7 @@
         <nav class="container">
             <div class="logo">
                 <img src="images/logo-icon.png" alt="Easy does IT logo" class="logo-icon">
-                Easy does&nbsp;<span class="orange-text"> IT</span>
+                Easy does <span class="orange-text">IT</span>
             </div>
             <ul class="nav-links">
                 <li><a href="#services">Services</a></li>
