--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
             font-size: 1.5rem;
             font-weight: 700;
             color: #2c5259;
-            white-space: nowrap;
         }
 
         .logo-icon {
@@ -620,7 +619,7 @@
         <nav class="container">
             <div class="logo">
                 <img src="images/logo-icon.png" alt="Easy does IT logo" class="logo-icon">
-                Easy does <span class="orange-text">IT</span>
+                Easy does&ensp;<span class="orange-text">IT</span>
             </div>
             <ul class="nav-links">
                 <li><a href="#services">Services</a></li>
@@ -709,7 +708,7 @@
     <section class="services" id="services">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">Our Core IT Services</h2>
+                <h2 class="section-title">Our IT Services</h2>
                 <p class="section-subtitle">We focus on the essentials - helping you choose, set up, learn, and maintain your technology systems with confidence.</p>
             </div>
             <div class="services-grid">
