--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
         <nav class="container">
             <div class="logo">
                 <img src="images/logo-icon.png" alt="Easy does IT logo" class="logo-icon">
-                Easy does&ensp;<span class="orange-text">IT</span>
+                Easy does&nbsp;<span class="orange-text">IT</span>
             </div>
             <ul class="nav-links">
                 <li><a href="#services">Services</a></li>
