--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
 
                 <div class="hero-contact-form">
                     <div class="form-header">
-                        <h3>Get Your Free Consultation</h3>
+                        <h3>Get Your Free Quote</h3>
                         <p>Tell us about your IT needs and we'll provide personalized recommendations</p>
                     </div>
                     <form id="contact-form">
