--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Professional IT support services in Vancouver BC. Hardware procurement, installation, user training, and maintenance. Same-day service. Call (604) 354-9399 for reliable Vancouver IT support.">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <title>Easy does IT - Professional IT Support in Vancouver BC</title>
+    <title>Easy Does IT - Professional IT Support in Vancouver BC</title>
     <style>
         * {
             margin: 0;
@@ -618,8 +618,8 @@
     <header>
         <nav class="container">
             <div class="logo">
-                <img src="images/logo-icon.png" alt="Easy does IT logo" class="logo-icon">
-                Easy does&nbsp;<span class="orange-text">IT</span>
+                <img src="images/logo-icon.png" alt="Easy Does IT logo" class="logo-icon">
+                Easy Does&nbsp;<span class="orange-text">IT</span>
             </div>
             <ul class="nav-links">
                 <li><a href="#services">Services</a></li>
@@ -788,7 +788,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <h2>Making Technology Simple and Accessible</h2>
-                    <p>At Easy does IT, we believe technology should work for you, not against you. We specialize in helping individuals and small businesses navigate their technology needs with practical, straightforward solutions.</p>
+                    <p>At Easy Does IT, we believe technology should work for you, not against you. We specialize in helping individuals and small businesses navigate their technology needs with practical, straightforward solutions.</p>
                     <p>Our approach is simple: listen to your needs, recommend the right solutions, implement them properly, and teach you how to use them effectively. No jargon, no overselling - just honest, professional IT support.</p>
                     <div class="stats">
                         <div class="stat">
@@ -824,7 +824,7 @@
                 <h3 class="owner-name">Ronan Mc Cormack</h3>
                 <p class="owner-title">Owner & IT Consultant</p>
                 <p class="owner-bio">
-                    With over 10 years in IT and a passion for helping people understand technology, Ronan founded Easy does IT to bridge the gap between complex technology and everyday users. He specializes in making technology decisions simple and ensuring clients feel confident using their systems.
+                    With over 10 years in IT and a passion for helping people understand technology, Ronan founded Easy Does IT to bridge the gap between complex technology and everyday users. He specializes in making technology decisions simple and ensuring clients feel confident using their systems.
                 </p>
                 <div class="credentials">
                     <div class="credential-badge">MSc Data Science</div>
@@ -872,7 +872,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 Easy does IT. All rights reserved. Making technology simple and accessible.</p>
+            <p>&copy; 2025 Easy Does IT. All rights reserved. Making technology simple and accessible.</p>
         </div>
     </footer>
 
