--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                             <textarea id="message" name="message" rows="3" placeholder="What technology challenges can we help you solve?"></textarea>
                         </div>
                         <button type="submit" class="form-submit">
-                            <span>Get Free Consultation</span>
+                            <span>Get Free Quote</span>
                             <span>→</span>
                         </button>
                     </form>
@@ -813,7 +813,7 @@
     <section class="team" id="team">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">Meet the Owner</h2>
+                <h2 class="section-title">Meet the Team</h2>
                 <p class="section-subtitle">Your trusted technology partner committed to making IT simple and accessible.</p>
             </div>
             <div class="owner-profile">
@@ -862,7 +862,7 @@
                     <div class="contact-icon">⏰</div>
                     <div class="contact-text">
                         <h4>Business Hours</h4>
-                        <p>Mon-Fri: 8AM-6PM<br>Same-day consultations available</p>
+                        <p>Mon-Fri: 8AM-6PM</p>
                     </div>
                 </div>
             </div>
