--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             line-height: 1.6;
-            color: #2c3e50;
-            background: #ffffff;
+            color: #2B2A27;
+            background: #F6F3EF;
         }
 
         .container {
@@ -29,13 +29,13 @@
 
         /* Header */
         header {
-            background: #ffffff;
-            border-bottom: 1px solid #e5e7eb;
+            background: #F9F7F4;
+            border-bottom: 1px solid rgba(62, 61, 58, 0.1);
             padding: 1rem 0;
             position: sticky;
             top: 0;
             z-index: 100;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+            box-shadow: 0 1px 3px rgba(62, 61, 58, 0.08);
         }
 
         nav {
@@ -49,7 +49,7 @@
             align-items: center;
             font-size: 1.5rem;
             font-weight: 700;
-            color: #2c5259;
+            color: #3E3D3A;
         }
 
         .logo-icon {
@@ -59,7 +59,7 @@
         }
 
         .logo .orange-text {
-            color: #e67e3b;
+            color: #B47E4E;
         }
         .nav-links {
             display: flex;
@@ -68,7 +68,7 @@
         }
 
         .nav-links a {
-            color: #64748b;
+            color: #6A6966;
             text-decoration: none;
             font-weight: 500;
             transition: color 0.3s ease;
@@ -76,12 +76,12 @@
         }
 
         .nav-links a:hover {
-            color: #2c5259;
+            color: #3E3D3A;
         }
 
         .contact-btn {
-            background: #2c5259;
-            color: white;
+            background: #3E3D3A;
+            color: #F9F7F4;
             padding: 0.75rem 1.5rem;
             border-radius: 8px;
             text-decoration: none;
@@ -91,13 +91,13 @@
         }
 
         .contact-btn:hover {
-            background: #1e3a40;
+            background: #2B2A27;
             transform: translateY(-1px);
         }
 
         /* Hero Section with Contact Form */
         .hero {
-            background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
+            background: linear-gradient(135deg, #F6F3EF 0%, #EDE8E2 100%);
             padding: 4rem 0 6rem;
         }
 
@@ -113,14 +113,14 @@
         .hero-text h1 {
             font-size: 3rem;
             font-weight: 800;
-            color: #1e293b;
+            color: #2B2A27;
             line-height: 1.2;
             margin-bottom: 1.5rem;
         }
 
         .hero-text p {
             font-size: 1.1rem;
-            color: #64748b;
+            color: #6A6966;
             margin-bottom: 2rem;
             line-height: 1.6;
         }
@@ -135,29 +135,29 @@
             display: flex;
             align-items: center;
             gap: 0.75rem;
-            color: #64748b;
+            color: #6A6966;
         }
 
         .feature-icon {
             width: 24px;
             height: 24px;
-            background: #2c5259;
+            background: #3E3D3A;
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            color: white;
+            color: #F9F7F4;
             font-size: 14px;
             flex-shrink: 0;
         }
 
         .hero-contact-form {
-            background: rgba(255, 255, 255, 0.9);
+            background: rgba(249, 247, 244, 0.95);
             padding: 2.5rem;
             border-radius: 16px;
-            box-shadow: 0 20px 40px rgba(0,0,0,0.1);
+            box-shadow: 0 20px 40px rgba(62, 61, 58, 0.12);
             backdrop-filter: blur(10px);
-            border: 1px solid rgba(255,255,255,0.2);
+            border: 1px solid rgba(154, 167, 158, 0.2);
         }
 
         .form-header {
@@ -168,12 +168,12 @@
         .form-header h3 {
             font-size: 1.5rem;
             font-weight: 700;
-            color: #1e293b;
+            color: #2B2A27;
             margin-bottom: 0.5rem;
         }
 
         .form-header p {
-            color: #64748b;
+            color: #6A6966;
             font-size: 0.95rem;
         }
 
@@ -185,7 +185,7 @@
             display: block;
             margin-bottom: 0.5rem;
             font-weight: 500;
-            color: #374151;
+            color: #2B2A27;
         }
 
         .form-group input,
@@ -193,10 +193,10 @@
         .form-group select {
             width: 100%;
             padding: 0.875rem;
-            border: 2px solid #e5e7eb;
+            border: 2px solid rgba(62, 61, 58, 0.15);
             border-radius: 8px;
-            background: white;
-            color: #374151;
+            background: #F9F7F4;
+            color: #2B2A27;
             font-size: 0.95rem;
             transition: border-color 0.3s ease;
         }
@@ -205,17 +205,17 @@
         .form-group textarea:focus,
         .form-group select:focus {
             outline: none;
-            border-color: #2c5259;
+            border-color: #3E3D3A;
         }
 
         .form-group input::placeholder,
         .form-group textarea::placeholder {
-            color: #9ca3af;
+            color: #9A9A9A;
         }
 
         .form-submit {
-            background: #2c5259;
-            color: white;
+            background: #3E3D3A;
+            color: #F9F7F4;
             padding: 1rem 2rem;
             border: none;
             border-radius: 8px;
@@ -231,7 +231,7 @@
         }
 
         .form-submit:hover {
-            background: #1e3a40;
+            background: #2B2A27;
             transform: translateY(-1px);
         }
 
@@ -244,7 +244,7 @@
         /* Services Section */
         .services {
             padding: 6rem 0;
-            background: #ffffff;
+            background: #F9F7F4;
         }
 
         .section-header {
@@ -255,13 +255,13 @@
         .section-title {
             font-size: 2.5rem;
             font-weight: 800;
-            color: #1e293b;
+            color: #2B2A27;
             margin-bottom: 1rem;
         }
 
         .section-subtitle {
             font-size: 1.1rem;
-            color: #64748b;
+            color: #6A6966;
             max-width: 600px;
             margin: 0 auto;
         }
@@ -273,42 +273,42 @@
         }
 
         .service-card {
-            background: #ffffff;
+            background: #F6F3EF;
             padding: 2.5rem;
             border-radius: 12px;
-            border: 1px solid #e5e7eb;
+            border: 1px solid rgba(62, 61, 58, 0.1);
             transition: all 0.3s ease;
             position: relative;
         }
 
         .service-card:hover {
             transform: translateY(-4px);
-            box-shadow: 0 20px 40px rgba(0,0,0,0.1);
-            border-color: #2c5259;
+            box-shadow: 0 20px 40px rgba(62, 61, 58, 0.12);
+            border-color: #9AA79E;
         }
 
         .service-icon {
             width: 64px;
             height: 64px;
-            background: linear-gradient(135deg, #2c5259, #e67e3b);
+            background: linear-gradient(135deg, #3E3D3A, #B47E4E);
             border-radius: 12px;
             display: flex;
             align-items: center;
             justify-content: center;
             margin-bottom: 1.5rem;
             font-size: 1.8rem;
-            color: white;
+            color: #F9F7F4;
         }
 
         .service-card h3 {
             font-size: 1.4rem;
             font-weight: 700;
-            color: #1e293b;
+            color: #2B2A27;
             margin-bottom: 1rem;
         }
 
         .service-card p {
-            color: #64748b;
+            color: #6A6966;
             line-height: 1.7;
             margin-bottom: 1.5rem;
         }
@@ -319,7 +319,7 @@
         }
 
         .service-features li {
-            color: #64748b;
+            color: #6A6966;
             font-size: 0.9rem;
             margin-bottom: 0.5rem;
             padding-left: 1.5rem;
@@ -330,14 +330,14 @@
             content: "✓";
             position: absolute;
             left: 0;
-            color: #2c5259;
+            color: #3E3D3A;
             font-weight: bold;
         }
 
         /* Projects Section */
         .projects {
             padding: 6rem 0;
-            background: #f8fafc;
+            background: #F6F3EF;
         }
 
         .projects-grid {
@@ -347,10 +347,10 @@
         }
 
         .project-card {
-            background: #ffffff;
+            background: #F9F7F4;
             border-radius: 12px;
             overflow: hidden;
-            border: 1px solid #e5e7eb;
+            border: 1px solid rgba(62, 61, 58, 0.1);
             transition: all 0.3s ease;
             cursor: pointer;
             position: relative;
@@ -361,19 +361,19 @@
 
         .project-card:hover {
             transform: translateY(-8px);
-            box-shadow: 0 20px 40px rgba(0,0,0,0.15);
-            border-color: #2c5259;
+            box-shadow: 0 20px 40px rgba(62, 61, 58, 0.15);
+            border-color: #9AA79E;
         }
 
         .project-image {
             width: 100%;
             height: 220px;
             object-fit: cover;
-            background: linear-gradient(135deg, #2c5259, #e67e3b);
+            background: linear-gradient(135deg, #3E3D3A, #B47E4E);
             display: flex;
             align-items: center;
             justify-content: center;
-            color: white;
+            color: #F9F7F4;
             font-size: 3rem;
         }
 
@@ -390,12 +390,12 @@
         .project-card h3 {
             font-size: 1.4rem;
             font-weight: 700;
-            color: #1e293b;
+            color: #2B2A27;
             margin-bottom: 1rem;
         }
 
         .project-card p {
-            color: #64748b;
+            color: #6A6966;
             line-height: 1.6;
             margin-bottom: 1.5rem;
         }
@@ -408,8 +408,8 @@
         }
 
         .project-tag {
-            background: #f1f5f9;
-            color: #2c5259;
+            background: rgba(154, 167, 158, 0.15);
+            color: #3E3D3A;
             padding: 0.4rem 0.8rem;
             border-radius: 6px;
             font-size: 0.8rem;
@@ -420,14 +420,14 @@
             display: inline-flex;
             align-items: center;
             gap: 0.5rem;
-            color: #2c5259;
+            color: #3E3D3A;
             font-weight: 600;
             text-decoration: none;
             transition: all 0.3s ease;
         }
 
         .project-link:hover {
-            color: #e67e3b;
+            color: #B47E4E;
             gap: 0.75rem;
         }
 
@@ -439,7 +439,7 @@
         /* About/Stats Section */
         .about {
             padding: 4rem 0;
-            background: #ffffff;
+            background: #F9F7F4;
         }
 
         .about-content {
@@ -456,26 +456,28 @@
         .stat {
             text-align: center;
             padding: 2rem 1rem;
-            background: #f8fafc;
+            background: #F6F3EF;
             border-radius: 12px;
             transition: all 0.3s ease;
+            border: 1px solid rgba(154, 167, 158, 0.2);
         }
 
         .stat:hover {
             transform: translateY(-4px);
-            box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+            box-shadow: 0 10px 25px rgba(62, 61, 58, 0.1);
+            border-color: #9AA79E;
         }
 
         .stat-number {
             font-size: 2.5rem;
             font-weight: 800;
-            color: #2c5259;
+            color: #3E3D3A;
             display: block;
             margin-bottom: 0.5rem;
         }
 
         .stat-label {
-            color: #64748b;
+            color: #6A6966;
             font-size: 0.9rem;
             font-weight: 500;
             text-transform: uppercase;
@@ -485,7 +487,7 @@
         /* Team Section */
         .team {
             padding: 6rem 0;
-            background: #f8fafc;
+            background: #F6F3EF;
         }
 
         .owner-profile {
@@ -494,32 +496,32 @@
             align-items: center;
             max-width: 600px;
             margin: 3rem auto 0;
-            background: #ffffff;
+            background: #F9F7F4;
             padding: 3rem;
             border-radius: 20px;
-            border: 1px solid #e5e7eb;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+            border: 1px solid rgba(154, 167, 158, 0.2);
+            box-shadow: 0 10px 30px rgba(62, 61, 58, 0.12);
             transition: all 0.3s ease;
         }
 
         .owner-profile:hover {
             transform: translateY(-8px);
-            box-shadow: 0 20px 40px rgba(0,0,0,0.15);
+            box-shadow: 0 20px 40px rgba(62, 61, 58, 0.15);
         }
 
         .profile-image {
             width: 140px;
             height: 140px;
             border-radius: 50%;
-            background: linear-gradient(135deg, #2c5259, #e67e3b);
+            background: linear-gradient(135deg, #3E3D3A, #B47E4E);
             display: flex;
             align-items: center;
             justify-content: center;
             font-size: 3rem;
-            color: white;
+            color: #F9F7F4;
             margin-bottom: 2rem;
-            border: 4px solid #ffffff;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+            border: 4px solid #F9F7F4;
+            box-shadow: 0 10px 25px rgba(62, 61, 58, 0.2);
             position: relative;
             overflow: hidden;
         }
@@ -534,21 +536,21 @@
         .owner-name {
             font-size: 2rem;
             font-weight: 800;
-            color: #1e293b;
+            color: #2B2A27;
             margin-bottom: 0.5rem;
             text-align: center;
         }
 
         .owner-title {
             font-size: 1.2rem;
-            color: #2c5259;
+            color: #3E3D3A;
             font-weight: 600;
             margin-bottom: 1.5rem;
             text-align: center;
         }
 
         .owner-bio {
-            color: #64748b;
+            color: #6A6966;
             font-size: 1.1rem;
             line-height: 1.7;
             text-align: center;
@@ -564,8 +566,8 @@
         }
 
         .credential-badge {
-            background: linear-gradient(135deg, #2c5259, #e67e3b);
-            color: white;
+            background: linear-gradient(135deg, #3E3D3A, #B47E4E);
+            color: #F9F7F4;
             padding: 0.5rem 1rem;
             border-radius: 20px;
             font-size: 0.85rem;
@@ -576,8 +578,8 @@
         /* Contact Info Section */
         .contact-info {
             padding: 6rem 0;
-            background: #1e293b;
-            color: white;
+            background: #2B2A27;
+            color: #F6F3EF;
         }
 
         .contact-details {
@@ -592,21 +594,23 @@
             align-items: flex-start;
             gap: 1rem;
             padding: 2rem;
-            background: rgba(255,255,255,0.1);
+            background: rgba(62, 61, 58, 0.3);
             border-radius: 12px;
             backdrop-filter: blur(10px);
             transition: all 0.3s ease;
+            border: 1px solid rgba(154, 167, 158, 0.2);
         }
 
         .contact-item:hover {
-            background: rgba(255,255,255,0.15);
+            background: rgba(62, 61, 58, 0.4);
             transform: translateY(-2px);
+            border-color: #9AA79E;
         }
 
         .contact-icon {
             width: 48px;
             height: 48px;
-            background: #e67e3b;
+            background: #B47E4E;
             border-radius: 8px;
             display: flex;
             align-items: center;
@@ -624,20 +628,20 @@
             font-size: 1.1rem;
             font-weight: 600;
             margin-bottom: 0.5rem;
-            color: white;
+            color: #F6F3EF;
         }
 
         .contact-item p {
             opacity: 0.9;
             font-size: 0.95rem;
             line-height: 1.5;
-            color: rgba(255,255,255,0.9);
+            color: rgba(246, 243, 239, 0.9);
         }
 
         /* Footer */
         footer {
-            background: #0f172a;
-            color: white;
+            background: #1A1918;
+            color: #F6F3EF;
             text-align: center;
             padding: 2rem 0;
         }
@@ -825,8 +829,8 @@
     <section class="contact-info" id="contact">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title" style="color: white;" id="contact-title">Loading...</h2>
-                <p class="section-subtitle" style="color: rgba(255,255,255,0.9);" id="contact-subtitle">Loading...</p>
+                <h2 class="section-title" style="color: #F6F3EF;" id="contact-title">Loading...</h2>
+                <p class="section-subtitle" style="color: rgba(246,243,239,0.9);" id="contact-subtitle">Loading...</p>
             </div>
             <div class="contact-details" id="contact-details">
                 <!-- Contact items will be populated dynamically -->
@@ -839,7 +843,7 @@
         <div class="container">
             <p id="footer-copyright">Loading...</p>
             <p style="margin-top: 10px; opacity: 0.8;">
-                <a href="" id="privacy-link" style="color: white; text-decoration: underline; opacity: 0.8; transition: opacity 0.3s;">Privacy Policy</a>
+                <a href="" id="privacy-link" style="color: #F6F3EF; text-decoration: underline; opacity: 0.8; transition: opacity 0.3s;">Privacy Policy</a>
             </p>
         </div>
     </footer>
@@ -1034,8 +1038,8 @@
                 }
                 
                 emailjs.sendForm(
-                    config.company.emailJsServiceId,
-                    config.company.emailJsTemplateId,
+                    'SERVICE_ID',
+                    'TEMPLATE_ID',
                     this
                 ).then(function(response) {
                     console.log('EmailJS SUCCESS!', response.status, response.text);
