--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="" id="meta-description">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <title id="meta-title">Loading...</title>
+    <title id="meta-title">IT Support Vancouver BC | Easy Does IT - Professional IT Services</title>
     <link rel="stylesheet" href="style.css">
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
 </head>
@@ -16,7 +16,7 @@
         <nav class="container">
             <div class="logo">
                 <img src="images/logo-icon.png" alt="Easy Does IT logo" class="logo-icon">
-                <span id="logo-text">Loading...</span>
+                <span id="logo-text">IT Support Vancouver BC | Easy Does IT - Professional IT Services</span>
             </div>
             <ul class="nav-links">
                 <li><a href="#services">Services</a></li>
